; ModuleID = '/home/carl/AnghaBench/freebsd/stand/ficl/extr_words.c_postponeCoIm.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/ficl/extr_words.c_postponeCoIm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32 }
%struct.TYPE_8__ = type { i32* }

@.str = private unnamed_addr constant [2 x i8] c",\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*)* @postponeCoIm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @postponeCoIm(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_8__, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %8 = call i32* @vmGetDict(%struct.TYPE_7__* %7)
  store i32* %8, i32** %3, align 8
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32* @ficlLookup(i32 %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @assert(i32* %13)
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %16 = call i32 @ficlTick(%struct.TYPE_7__* %15)
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32* @stackGetTop(i32 %19)
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 0
  store i32* %20, i32** %21, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %6, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %4, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = call i64 @wordIsImmediate(i32* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %34

27:                                               ; preds = %1
  %28 = load i32*, i32** %3, align 8
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @stackPop(i32 %31)
  %33 = call i32 @dictAppendCell(i32* %28, i32 %32)
  br label %41

34:                                               ; preds = %1
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %36 = call i32 @literalIm(%struct.TYPE_7__* %35)
  %37 = load i32*, i32** %3, align 8
  %38 = load i32*, i32** %5, align 8
  %39 = call i32 @LVALUEtoCELL(i32* %38)
  %40 = call i32 @dictAppendCell(i32* %37, i32 %39)
  br label %41

41:                                               ; preds = %34, %27
  ret void
}

declare dso_local i32* @vmGetDict(%struct.TYPE_7__*) #1

declare dso_local i32* @ficlLookup(i32, i8*) #1

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @ficlTick(%struct.TYPE_7__*) #1

declare dso_local i32* @stackGetTop(i32) #1

declare dso_local i64 @wordIsImmediate(i32*) #1

declare dso_local i32 @dictAppendCell(i32*, i32) #1

declare dso_local i32 @stackPop(i32) #1

declare dso_local i32 @literalIm(%struct.TYPE_7__*) #1

declare dso_local i32 @LVALUEtoCELL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
